--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Prueba de html en  vscode tablet</title>
 </head>
 <body>
-    <h1>Html en tablet con vscode web</h1>
+    <h1>Html en tablet con vscode</h1>
     <p>pequeña prueba si se puede cargar una pagina creada en la tablet</p>
 </body>
 </html>
