codigo html y  estlos de la pagiina kid salud

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba de html en  vscode tablet</title>
+    <title>Kid Salud</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Html en tablet con vscode</h1>
-    <p>pequeña prueba si se puede cargar una pagina creada en la tablet</p>
+    <div class="circulo-fondo">
+
+    </div>
+    <div class="contenedor">
+        <div class="col1">
+            <h2>Kid Salud - Clinica para niños</h2>
+            <img src="foto.png" alt="niño salud" class="foto">
+            <p class="descripcion">Todos los derechos reservados - Codigo Web</p>
+        </div>
+
+        <div class="col2">
+            <div class="info">
+                <div class="contenedor-form">
+                    <h2>Registrarse</h2>
+                    <form action="">
+                        <div class="entrada">
+                            <label for="nombre">Nombre Completo</label>
+                            <input type="text" name="nombre" id="">
+                        </div>
+                        <div class="entrada">
+                            <label for="correo">Correo Electronico</label>
+                            <input type="text" name="correo" id="">
+                        </div>
+                        <div class="entrada">
+                            <label for="contraseña">Password</label>
+                            <input type="password" name="contraseña" id="">
+                        </div>
+                        <button>Registrarse</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
